# mowglinext

./: .env  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SESSION-2026-04-18.md  build.sh  docker-compose.foxglove.yaml  docker-compose.remote.host.yaml  docker-compose.remote.pi.yaml  docker-compose.yaml  fastdds.xml  go.mod  go.sum  install.sh  main.go  mowglinext-gnss-unicore-audit.patch  test_gnss_architecture.sh
ros2/src/mowgli_behavior/: CMakeLists.txt  package.xml
ros2/src/mowgli_behavior/config/: behavior_tree.yaml  behavior_tree_small_garden.yaml
ros2/src/mowgli_behavior/include/mowgli_behavior/: action_nodes.hpp  bt_context.hpp  condition_nodes.hpp  coverage_nodes.hpp  navigation_nodes.hpp  (+2 more)
ros2/src/mowgli_behavior/src/: action_nodes.cpp  behavior_tree_node.cpp  calibration_nodes.cpp  condition_nodes.cpp  coverage_nodes.cpp  navigation_nodes.cpp  recording_nodes.cpp  register_nodes.cpp  status_nodes.cpp  utility_nodes.cpp
ros2/src/mowgli_behavior/trees/: main_tree.xml  navigate_to_pose.xml
ros2/src/mowgli_bringup/: CMakeLists.txt  package.xml
ros2/src/mowgli_bringup/config/: cartographer.lua  foxglove_bridge.yaml  hardware_bridge.yaml  kinematic_icp.yaml  localization.yaml  mowgli_robot.yaml  nav2_params.yaml  nav2_params_no_lidar.yaml  robot_localization.yaml  slam_toolbox.yaml  twist_mux.yaml  ublox_gnss.yaml
ros2/src/mowgli_bringup/launch/: cartographer.launch.py  foxglove_bridge.launch.py  full_system.launch.py  kinematic_icp.launch.py  mowgli.launch.py  nav2_navigation_launch.py  navigation.launch.py  sim_full_system.launch.py  sim_small_garden.launch.py  simulation.launch.py  unicore_gnss.launch.py
ros2/src/mowgli_bringup/test/: backend_topics_test_common.py  test_coverage_service.launch.py  test_mowgli_launch_topics_mavros.launch.py  test_mowgli_launch_topics_mowgli.launch.py  test_nav2_params.py  test_nodes_startup.launch.py
ros2/src/mowgli_bringup/urdf/: mowgli.urdf.xacro
ros2/src/mowgli_coverage_planner/: CMakeLists.txt  package.xml
ros2/src/mowgli_coverage_planner/config/: coverage_planner.yaml
ros2/src/mowgli_coverage_planner/src/: coverage_planner_node.cpp  main.cpp  polygon_utils.cpp
ros2/src/mowgli_coverage_planner/test/: test_coverage_planner.cpp  test_polygon_utils.cpp
ros2/src/mowgli_hardware/: CMakeLists.txt  package.xml
ros2/src/mowgli_hardware/firmware/: README.md  cobs.c  cobs.h  crc16.c  crc16.h  mowgli_comms.c  mowgli_comms.h  mowgli_protocol.h
ros2/src/mowgli_hardware/src/: cobs.cpp  crc16.cpp  hardware_bridge_node.cpp  packet_handler.cpp  serial_port.cpp
ros2/src/mowgli_hardware/test/: test_angular_rate_controller.cpp  test_cobs.cpp  test_packet_handler.cpp  test_protocol.cpp
ros2/src/mowgli_localization/: CMakeLists.txt  package.xml
ros2/src/mowgli_localization/config/: wheel_odometry.yaml
ros2/src/mowgli_localization/launch/: localization.launch.py
ros2/src/mowgli_localization/scripts/: calibrate_imu_yaw_node.py  kinematic_icp_encoder_adapter.py  kinematic_icp_scan_frame_relay.py  wheel_odom_tf_node.py
ros2/src/mowgli_localization/src/: cog_to_imu_node.cpp  gps_pose_converter_node.cpp  gps_slam_corrector_node.cpp  localization_monitor_node.cpp  map_odom_fuser_node.cpp  navsat_to_absolute_pose_node.cpp  slam_heading_node.cpp  ublox_gnss_adapter_node.cpp  wheel_odometry_node.cpp
ros2/src/mowgli_localization/test/: test_gnss_runtime_state_builder.cpp  test_gnss_status_adapter.cpp  test_wheel_odometry.cpp
ros2/src/mowgli_mavros_bridge/: CMakeLists.txt
ros2/src/mowgli_mavros_bridge/src/: mavros_hardware_bridge_node.cpp
ros2/src/mowgli_monitoring/: CMakeLists.txt  package.xml
ros2/src/mowgli_monitoring/config/: diagnostics.yaml  mqtt_bridge.yaml
ros2/src/mowgli_monitoring/src/: diagnostics_main.cpp  diagnostics_node.cpp  mqtt_bridge_main.cpp  mqtt_bridge_node.cpp
ros2/src/mowgli_monitoring/test/: test_diagnostics.cpp
ros2/src/mowgli_ntrip_client/: CMakeLists.txt  package.xml
ros2/src/mowgli_ntrip_client/launch/: mowgli_ntrip_client.launch.py
ros2/src/mowgli_ntrip_client/src/: main.cpp  ntrip_client_node.cpp  ntrip_connection.cpp
ros2/src/mowgli_simulation/: CMakeLists.txt  package.xml
ros2/src/mowgli_simulation/config/: gazebo_bridge.yaml
ros2/src/mowgli_simulation/launch/: simulation.launch.py  spawn_mower.launch.py  webots_minimal.launch.py
ros2/src/mowgli_simulation/mowgli_simulation/: kinematic_drive.py
ros2/src/mowgli_simulation/protos/: MowgliMower.proto
ros2/src/mowgli_simulation/rviz/: mowgli_sim.rviz
ros2/src/mowgli_simulation/scripts/: sim_cmd_vel_unstamp.py
ros2/src/mowgli_simulation/src/: fake_hardware_bridge_node.cpp  gps_degradation_sim_node.cpp  navsat_to_pose_node.cpp
ros2/src/mowgli_simulation/urdf_webots/: mowgli_webots.urdf
ros2/src/mowgli_simulation/worlds/: garden.sdf  small_garden.sdf
ros2/src/mowgli_simulation/worlds_webots/: mowgli_garden.wbt
sensors/tfluna/: CMakeLists.txt  README.md  package.xml
sensors/tfluna/include/: tfluna_node.hpp
sensors/tfluna/launch/: tfluna_dual.launch.py  tfluna_edge.launch.py  tfluna_front.launch.py
sensors/tfluna/src/: main.cpp  tfluna_node.cpp
sensors/unicore/: CMakeLists.txt  Dockerfile  configure_receiver.sh  package.xml  ros2_entrypoint.sh  start_gps.sh  test_configure_receiver.sh  test_start_gps.sh  validate_live.sh
sensors/unicore/config/: um982.yaml
sensors/unicore/include/mowgli_unicore_gnss/: serial_port.hpp
sensors/unicore/ntrip_client_node/: CMakeLists.txt  package.xml
sensors/unicore/ntrip_client_node/src/: ntrip_client_node.cpp
sensors/unicore/src/: serial_port.cpp  um982_node.cpp
src/mowgli_bringup/: CMakeLists.txt  package.xml
src/mowgli_bringup/config/: localization.yaml  nav2_params.yaml  rosbridge.yaml  slam_toolbox.yaml
src/mowgli_bringup/launch/: full_system.launch.py  mowgli.launch.py  navigation.launch.py  rosbridge.launch.py  sim_full_system.launch.py  sim_small_garden.launch.py
src/mowgli_bringup/test/: test_coverage_service.launch.py  test_nodes_startup.launch.py
src/mowgli_bringup/urdf/: mowgli.urdf.xacro
(+511 files in other folders)
