<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unicore_gnss</name>
  <version>0.1.0</version>
  <description>Stub manifest for colcon discovery — the real unicore_gnss package is built inside sensors/unicore/Dockerfile from cedbossneo/unicore-ros2.</description>
  <maintainer email="cedric@mowgli.dev">Cedric</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>compass_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rtcm_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
