<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mowgli_coverage_planner</name>
  <version>0.1.0</version>
  <description>
    Coverage path planner for the Mowgli autonomous robot mower.
    Provides a ROS2 service that accepts an area boundary and optional obstacle
    polygons, then returns an efficient boustrophedon mowing path using standalone
    geometric algorithms (no external geometry library dependency).
  </description>
  <maintainer email="cedric@mowgli.dev">Cedric</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mowgli_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- Fields2Cover v2 installed system-wide via cmake; not a ROS package -->

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
