<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mowgli_localization</name>
  <version>0.1.0</version>
  <description>
    Localization nodes for the Mowgli robot mower: wheel odometry integration,
    GPS conversion, and a localization quality monitor.  FusionCore (launched
    by this package) provides the odom→base_footprint TF.
  </description>
  <maintainer email="cedric@mowgli.dev">Cedric</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>diagnostic_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mowgli_interfaces</depend>
  <depend>ublox_ubx_msgs</depend>

  <!-- FusionCore is launched by this package but not compiled against -->
  <exec_depend>fusioncore_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
