<?xml version="1.0"?>
<package format="3">
  <name>mowgli_ntrip_client</name>
  <version>0.1.0</version>
  <description>ROS 2 NTRIP client that publishes RTCM3 corrections on /rtcm for MAVROS.</description>

  <maintainer email="pepeuch@gmail.com">You</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>mavros_msgs</depend>
  <depend>rclcpp</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
